# Project_trainee_fullstack_aton

./: .gitignore  README.md  pyproject.toml  readmy.md
config/: settings.py  urls.py
main/: forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/main/: base.html  client_form.html  client_form_status.html  list.html  login.html  register.html
